branches/wip/Archive/4ae20910837ac250f67155c7c3918eb4-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp:3:7: error: expected initializer before 'Bar'
 Class Bar {
       ^
main.cpp:16:9: error: 'Bar' does not name a type
  extern Bar bar; 
         ^
main.cpp:18:1: error: expected ';' after class definition
 }
 ^
main.cpp: In member function 'int myApp::main()':
main.cpp:22:2: error: 'Bar' was not declared in this scope
  Bar bar(&foo);
  ^
main.cpp:22:6: error: expected ';' before 'bar'
  Bar bar(&foo);
      ^
